test_regress/t/t_struct_notfound_bad.out
%Error: t/t_struct_notfound_bad.v:13:9: Member 'nfmember' not found in structure
                                      : ... In instance t
      s.nfmember = 0;  
        ^~~~~~~~
%Error: Exiting due to
